test/fail/entityderivedproperty.app
// The expression of the derived property authoredPapers should have type String

application test

section datamodel

  entity User {
    authoredPapers :: String := 1
  }